--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/* --text: #f5e5e9;
+--background: #070304;
+--primary: #830b25;
+--secondary: #34141b;
+--accent: #be556c; */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,35 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #070304;
+  color: #f5e5e9;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+margin: 1rem 2rem;
+font-size: 2rem;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #f5e5e9;
+  box-shadow: 0px 1px 5px #830b25;
+}
+
+a {
+  text-decoration: none;
+  color: #f5e5e9;
+  padding: 4rem 1rem;
+}
+
+.drop-shadow-container {
+  filter: drop-shadow(10px 5px 10px #830b25);
+  width: 100%;
 }
